Feat: Phase 2 GPU Kernel & Phase 3 Kubernetes Infrastructure
- Implemented EternityKernel (CPU fallback) and AdvancedEternitySolver
- Integrated Redis JobQueue and ConstraintCache
- Added Dockerfile (multi-stage) and Kubernetes manifests (Redis, Eternity)
- Updated pom.xml for flatc compatibility and dependencies
- Added TASK.md to track progress